--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     padding: 0;
     border: 0;
 }
-
+ 
 body {
-    background-color: black;
+    background-color: rgb(5, 119, 20);
     color: beige;
 }
