--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@
     padding: 0;
     border: 0;
 }
- 
+
 body {
     background-color: rgb(5, 119, 20);
+
+
     color: beige;
 }
 
 canvas#cvs {
-    background-color: blue;
+    background-image: url('images/crash-canvas-bg.jpg');
+    margin: 0 0 0 300px;
+    /* border: 5px solid black; */
 }
