--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 
 body {
     background-color: rgb(5, 119, 20);
-
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
 
     color: beige;
 }
@@ -15,4 +18,56 @@ canvas#cvs {
     background-image: url('images/crash-canvas-bg.jpg');
     margin: 0 0 0 300px;
     /* border: 5px solid black; */
+}
+
+@keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+}
+
+div#BadLuck{
+    display: none;
+}
+
+div:nth-child(-n+6) {
+    background: linear-gradient(to right, red, orange, yellow, green);
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    color: white;
+    font-weight: bold;
+    padding: 20px;
+    text-align: center;
+    display: inline-block;
+    width: auto;
+    margin: 0;
+}
+
+div:nth-child(1) {
+    background: linear-gradient(to right, red, orange);
+}
+
+div:nth-child(2) {
+    background: linear-gradient(to right, orange, yellow); 
+}
+
+div:nth-child(3) {
+    background: linear-gradient(to right, yellow, green);
+}
+
+div:nth-child(4) {
+    background: linear-gradient(to right, green, red);
+}
+
+div:nth-child(5) {
+    background: linear-gradient(to right, red, orange);
+}
+div:nth-child(6) {
+    background: linear-gradient(to right, orange, yellow); 
 }
