--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient1 15s ease infinite; */
-    background-color: black;
     height: 100vh;
-
+    overflow: hidden;
     color: beige;
+    background: linear-gradient(to right, black, purple);
 }
 
 canvas#cvs {
@@ -71,12 +71,12 @@ canvas#cvs {
 }
 
 #CurseOfRa{
-    width: 300px;
-    height: 300px;
+    font-size:5rem;
+    width: 1920px;
+    height: 1920px;
     position: absolute;
     text-align: center;
-    left: 42%;
-    top: 85%;
+    display: none;
 }
 
 div:nth-child(-n+6) {
@@ -177,4 +177,40 @@ to {
 100% {
     transform: rotate(-1440deg) translateY(0) translateX(0) matrix3d(-0.5, 7.675, 4.654, 0, -1.595877, -1.2, 12.03209, 6.52354, 10.7856678025, -1.56789, 0.5, 12.7685, 0, -3, 1.0120, 1);
 }
+}
+
+#Bottom-Button{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to right, black, purple);
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+    padding: 10px;
+}
+
+#Top-Button{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to right, black, purple);
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+    padding: 10px;
+}
+
+#bet-button{
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    background: linear-gradient(to right, black, purple);
+    color: white;
 }
