--- a/style.css
+++ b/style.css
@@ -8,14 +8,12 @@
 
 
 body {
-    /* background-color: rgb(5, 119, 20);
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient1 15s ease infinite; */
+    
     height: 100vh;
     overflow: hidden;
     color: beige;
-    background: linear-gradient(to right, black, purple);
+    background: url('images/site-background.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 canvas#cvs {
@@ -24,6 +22,31 @@ canvas#cvs {
     background-size: 400% 400%;
     animation: gradient2 20s linear infinite;
     box-shadow: 0 0 50px 15px #3507b3;
+    border: 3px solid #825fe2;
+    opacity: 95%;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+table#prev-games-ul {
+    background: rgb(79,22,194);
+    background: radial-gradient(circle, rgba(21,0,180,1) 0%, rgba(137,11,186,1) 50%, rgba(4,8,179,1) 100%);
+    background-size: 400% 400%;
+    animation: gradient2 20s linear infinite;
+    box-shadow: 0 0 50px 15px #3507b3;
+    border: 3px solid #825fe2;
+    opacity: 95%;
+
+    width: 200px;
+    height: 600px;
+
+    position: absolute;
+    top: 50%;
+    left: 15%;
+    transform: translate(-50%, -50%);
 }
 
 @keyframes gradient2 {
@@ -80,7 +103,7 @@ canvas#cvs {
     display: none;
 }
 
-div:nth-child(-n+6) {
+/* div:nth-child(-n+6) {
     background: linear-gradient(to right, black, purple,);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
@@ -114,7 +137,7 @@ div:nth-child(5) {
 }
 div:nth-child(6) {
     background: linear-gradient(to right, purple, black); 
-}
+} */
 
 
 @keyframes fall {
@@ -186,26 +209,27 @@ to {
     left: 0;
     width: 100%;
     height: 100px;
-    background: linear-gradient(to right, black, purple);
+    /* background: linear-gradient(to right, black, purple); */
     text-align: center;
     font-weight: bold;
     font-size: 30px;
     color: white;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 #Top-Button{
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to right, black, purple);
+    /* width: 100%;
+    height: 100px; */
+    /* background: linear-gradient(to right, black, purple); */
     text-align: center;
     font-weight: bold;
     font-size: 30px;
     color: white;
-    padding: 10px;
+    /* padding: 10px; */
+    padding: 0;
 }
 
 #bet-button{
@@ -221,7 +245,7 @@ to {
     animation-iteration-count: alternate;
 }
 
-.GoldCoinSpin:nth-child(1){
+/* .GoldCoinSpin:nth-child(1){
     left: 14%;
     animation-delay: 0s;
 }
@@ -263,4 +287,4 @@ to {
     100% {
       transform: translateY(1800px) rotate(360deg);
     }
-  }
+  } */
