--- a/style.css
+++ b/style.css
@@ -43,10 +43,18 @@ table#prev-games-ul {
     width: 200px;
     height: 600px;
 
+
     position: absolute;
     top: 50%;
     left: 15%;
     transform: translate(-50%, -50%);
+
+
+}
+
+table#prev-games-ul tr {
+    font-size: 20px;
+    height: 30px;
 }
 
 @keyframes gradient2 {
